cluster/k8s/nb-sample copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nb-sample-deployment
  labels:
    app: nb-sample
spec:
  selector:
    matchLabels:
      app: nb-sample
  replicas: 1
  template:
    metadata:
      labels:
        app: nb-sample
    spec:
      containers:
      - name: nb-sample
        image: maltewildt/nb-sample:sample-golang-app
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nb-sample-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    nodePort: 31337
  selector:
    app: nb-sample
  externalIPs:
  - 20.113.178.234
