cluster/k8s/traefik-dashboaerd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: dashboard
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websec
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsenc
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: traefik.k8s.ohrenpirat.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-web-ui
            port:
              number: 8080
